<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_frag"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/layout_padding"
    android:paddingTop="@dimen/layout_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_info"
            android:textColor="@color/note_frame"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <TextView
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tv_show_photo"
        android:text="TextView"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/et_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_name"
        android:layout_toRightOf="@+id/tv_show_photo"
        android:text="TextView" />

    <TextView
        android:id="@+id/et_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_age"
        android:text="TextView" />

    <TextView
        android:id="@+id/et_dep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_gender"
        android:layout_toRightOf="@id/tv_show_photo"
        android:text="TextView" />

    <TextView
        android:id="@+id/et_bplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_dep"
        android:layout_toRightOf="@id/tv_show_photo"
        android:text="TextView" />


    <TextView
        android:id="@+id/grad_deg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Graduation Degree"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/et_Deg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/et_Deg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/et_Deg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_edit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:clickable="true"
        android:contextClickable="false"
        app:srcCompat="@android:drawable/ic_input_add" />


</LinearLayout>